// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="sc-eZkcaX cIeCQx"
>
  <div
    className="sc-rWIrQ llRcYm"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="sc-eZkcaX cIeCQx"
>
  <div
    className="sc-rWIrQ llRcYm"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ fMLgOu"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ igDeIS"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ lgdCue"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="sc-eZkcaX cIeCQx"
>
  <div
    className="sc-rWIrQ uezHb"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ fOHkZP"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ eDQKif"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ llRcYm"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="sc-rWIrQ kBTDqe"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
